Fixed alignment of elements. Added some colors and simple styles. Changed the function of the lower sentence's words (the subject and verb stay correct when clicked the first time and the object is the only one that will cycle through options).

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
   src: url("https://fonts.googleapis.com/css?family=Andika&display=swap");
 }
 
-div {
-  border: 1px solid black;
+div,
+img {
+  /* border: 1px solid black; */
   font-family: Andika, "Arial", "Times New Roman";
 }
 
@@ -18,13 +19,14 @@ div {
 .upperleft {
   display: flex;
   justify-content: center;
-  min-width: 50%;
+  align-items: center;
+  min-width: 80vw;
 }
 
 .upperright {
   display: flex;
-  justify-content: flex-end;
-  width: 20%;
+  justify-content: center;
+  width: 20vw;
 }
 
 .buttons {
@@ -32,6 +34,8 @@ div {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #aed6f1;
+  border-radius: 6px;
   min-height: 50vh;
   min-width: 10vw;
 }
@@ -40,6 +44,10 @@ div {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  max-height: 256px;
+  margin: 10px;
 }
 
 .uppersentence {
@@ -53,13 +61,11 @@ div {
 .word {
   margin: 10px;
   padding: 10px;
+  border-radius: 6px;
 }
 
-.lower {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.example {
+  margin: auto 30px;
 }
 
 .pronoun {
@@ -76,12 +82,28 @@ div {
   background-color: #3aabff;
 }
 
+.lower {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .image,
 .speaker,
 .listener,
 .speechbubble {
   width: 5vw;
   height: 5vw;
+  margin: 3px;
+}
+
+.speechbubble {
+  margin-bottom: 15vh;
+}
+
+.listener {
+  margin-right: 10px;
 }
 
 .lowersentence {
@@ -89,7 +111,55 @@ div {
   justify-content: center;
   align-items: center;
   font-size: 3em;
-  margin-left: 20px;
   /* background-image: src("speechbubble.png"); */
   /* backgroun-size: cover; */
+}
+
+.lowerleft {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 80vw;
+}
+
+.help {
+  display: flex;
+  justify-content: center;
+  min-width: 18vw;
+  padding: 3px;
+}
+
+.helptext {
+  border-radius: 6px;
+  min-width: 10vw;
+  text-align: center;
+  background-color: #aed6f1;
+}
+
+.subject {
+  background-color: #ec7063;
+  box-shadow: 0px 0px 3px 3px #ec7063;
+}
+
+.verb {
+  background-color: #f7dc6f;
+  box-shadow: 0px 0px 3px 3px #f7dc6f;
+}
+
+.object {
+  background-color: #82e0aa;
+  box-shadow: 0px 0px 3px 3px #82e0aa;
+}
+
+.overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
